# Rade

./: .env.example  main.py  monitor.py  pyproject.toml
app/: __init__.py  main.py
app/clients/: __init__.py  devin_client.py  github_client.py
app/core/: __init__.py  config.py  exceptions.py  logging_config.py  security.py
app/repositories/: __init__.py  session_repository.py
app/services/: webhook_service.py
docs/: design.md  development.md  guide_devin-api.md  guide_github-api.md
tests/: __init__.py  test_devin_client.py  test_github_client.py  test_security.py  test_session_repository.py  test_webhook_service.py
